saved express into package, as well as promise lib and added static file service

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/ddarrach314/hrsf80-mvp#readme",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "bootstrap": "^3.3.7",
+    "express": "^4.15.3",
     "jquery": "^3.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
