--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
+    "mongoose": "^4.11.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
