--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "BagAdvisor",
   "main": "server.js",
   "scripts": {
+    "compile": "webpack",
     "test": "test",
     "start": "node server.js",
     "build": "babel client -d lib"
@@ -19,13 +20,19 @@
   },
   "homepage": "https://github.com/ddarrach314/hrsf80-mvp#readme",
   "dependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "bootstrap": "^3.3.7",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
     "mongoose": "^4.11.5",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "webpack": "^3.4.1",
+    "webpack-dev-middleware": "^1.12.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
